--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.dxx</groupId>
     <artifactId>dxx-cloud-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>dxx-c3credit</name>
+    <name>dxx-cloud-demo</name>
     <packaging>pom</packaging>
     <description>Demo project for Spring Boot</description>
 
@@ -28,6 +28,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
+        <springfox.version>2.9.2</springfox.version>
     </properties>
 
     <dependencies>
@@ -43,6 +44,21 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- 引入swagger2-ui 接口API插件https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox.version}</version>
+        </dependency>
+
+        <!-- 引入swagger2接口API插件https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox.version}</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
