--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,14 @@
 
     <modules>
         <module>register-server</module>
-        <module>gateway</module>
+        <module>zuul</module>
         <module>common</module>
         <module>auth-client</module>
         <module>auth-server</module>
         <module>rbac</module>
         <module>producer1</module>
         <module>producer2</module>
+        <module>consumer</module>
     </modules>
 
     <properties>
